<resources>
    <string name="app_name">Exam2021</string>
    <string name="activity_main_tvTitulo">-- MENU PRINCIPAL --</string>
    <string name="activity_main_butBD">BASES DE DATOS</string>
    <string name="activity_main_butXML">EL TIEMPO (XML)</string>
    <string name="activity_main_butSalir">SALIR</string>
    <string name="activity_main_land_tvTitulo">MENU PRINCIPAL</string>
    <string name="activity_bdprincipal_tvTitulo">Mi Base de Datos de Libros</string>
    <string name="activity_bdprincipal_butNuevoLibro">NUEVO LIBRO</string>
    <string name="activity_bdprincipal_butListarLibros">LISTADO LIBROS</string>
    <string name="activity_bdprincipal_butBuscarLibros">BUSCAR LIBRO(S)</string>
    <string name="activity_bdprincipal_butSalir_bdprincipal">SALIR</string>
    <string name="activity_bdnuevo_libro_tvTitulo">DATOS NUEVO LIBRO</string>
    <string name="activity_bdnuevo_libro_butSalir_bdnuevo_libro">VOLVER</string>
    <string name="activity_bdnuevo_libro_tvTituloLibro">TÍTULO</string>
    <string name="activity_bdnuevo_libro_tvIsbn">ISBN</string>
    <string name="activity_bdnuevo_libro_tvEditorial">EDITORIAL</string>
    <string name="activity_bdnuevo_libro_tvNumPag">NUM. PÁGINAS</string>
    <string name="activity_bdnuevo_libro_tvAutor">AUTOR</string>
    <string name="activity_bdnuevo_libro_butInsertarLibro">INSERTAR</string>
    <string name="activity_bdnuevo_libro_butCancelarLibro">CANCELAR</string>
    <string name="activity_bdnuevo_libro_checkLeido">Leído</string>
    <string name="activity_bdlistar_libros_tvTitulo">Listado de libros</string>
    <string name="activity_bdlistar_libros_butVolver">VOLVER</string>
    <string name="activity_bdlistar_libros_radButLeido1">Leídos</string>
    <string name="activity_bdlistar_libros_radButLeido2">No Leídos</string>
    <string name="activity_bdlistar_libros_radButLeido3">Todos los libros</string>
    <string name="activity_bdlistar_libros_detalles_tvTitulo">INFORMACIÓN DETALLADA DEL LIBRO</string>
    <string name="activity_bdlistar_libros_detalles_butCancelar">CANCELAR</string>
    <string name="activity_bdlistar_libros_detalles_butEliminar">ELIMINAR</string>
    <string name="activity_bdlistar_libros_detalles_tvNumPag">Páginas</string>
    <string name="activity_bdlistar_libros_detalles_tvLeido_true">Libro LEÍDO</string>
    <string name="activity_bdlistar_libros_detalles_tvLeido_false">Libro NO LEÍDO</string>
    <string name="activity_bdbuscar_libros_tvTitulo">Buscar Libros</string>
    <string name="activity_bdbuscar_libros_tvSubtítulo">Marca la opción por la que quieres buscar</string>
    <string name="activity_bdbuscar_libros_radButBuscar1">TÍTULO</string>
    <string name="activity_bdbuscar_libros_radButBuscar2">AUTOR</string>
    <string name="activity_bdbuscar_libros_radButBuscar3">EDITORIAL</string>
    <string name="activity_bdbuscar_libros_butBuscar">BUSCAR</string>
    <string name="activity_bdbuscar_libros_butVolver">VOLVER</string>
    <string name="activity_bdbuscar_libros_lista_tvTitulo">Listado de libros</string>
    <string name="activity_bdbuscar_libros_lista_butVolver">VOLVER</string>
    <string name="activity_xml_tvTitulo">El Tiempo</string>
    <string name="activity_xml_tvSubtitulo">Escoge una de las siguientes localidades</string>
    <string name="activity_xml_butBilbao">BILBO-BILBAO</string>
    <string name="activity_xml_butVolver">VOLVER</string>
    <string name="activity_xml_butDonosita">DONOSTIA-SAN SEBASTIAN</string>
    <string name="activity_xml_butVitoria">VITORIA-GASTEIZ</string>
    <string name="activity_xml_tvEleccionTiempo">Tiempo en:</string>
    <string name="activity_xml_outputDia">Día</string>
    <string name="activity_xml_outputTempMax">Temperatura máxima</string>
    <string name="activity_xml_outputTempMin">Temperatura mínima</string>
    <string name="activity_xml_outputEstadoCielo">Estado del cielo</string>
</resources>