<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityBDPrincipal">

    <TextView
        android:id="@+id/tvTitulo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:gravity="center_horizontal"
        android:text="@string/activity_bdprincipal_tvTitulo"
        android:textColor="#05451B"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/butNuevoLibro"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:onClick="listener_butNuevoLibro"
        android:text="@string/activity_bdprincipal_butNuevoLibro"
        app:layout_constraintEnd_toEndOf="@+id/butBuscarLibros"
        app:layout_constraintStart_toStartOf="@+id/butBuscarLibros"
        app:layout_constraintTop_toBottomOf="@+id/tvTitulo" />

    <Button
        android:id="@+id/butListarLibros"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:onClick="listener_butListarLibros"
        android:text="@string/activity_bdprincipal_butListarLibros"
        app:layout_constraintEnd_toEndOf="@+id/butBuscarLibros"
        app:layout_constraintStart_toStartOf="@+id/butBuscarLibros"
        app:layout_constraintTop_toBottomOf="@+id/butNuevoLibro" />

    <Button
        android:id="@+id/butBuscarLibros"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/activity_bdprincipal_butBuscarLibros"
        android:onClick="listener_butBuscarLibros"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/butListarLibros" />

    <Button
        android:id="@+id/butSalir_bdprincipal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/activity_bdprincipal_butSalir_bdprincipal"
        android:onClick="listener_butSalir"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>