<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityXML">

    <TextView
        android:id="@+id/tvTitulo_xml"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/activity_xml_tvTitulo"
        android:textColor="#21712F"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvSubtitulo_xml"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/activity_xml_tvSubtitulo"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitulo_xml" />

    <Button
        android:id="@+id/butBilbao"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/activity_xml_butBilbao"
        android:onClick="listener_butBilbao"
        app:layout_constraintEnd_toEndOf="@+id/butDonosita"
        app:layout_constraintStart_toStartOf="@+id/butDonosita"
        app:layout_constraintTop_toBottomOf="@+id/tvSubtitulo_xml" />

    <Button
        android:id="@+id/butVitoria"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/activity_xml_butVitoria"
        android:onClick="listener_butVitoria"
        app:layout_constraintEnd_toEndOf="@+id/butDonosita"
        app:layout_constraintStart_toStartOf="@+id/butDonosita"
        app:layout_constraintTop_toBottomOf="@+id/butBilbao" />

    <Button
        android:id="@+id/butDonosita"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/activity_xml_butDonosita"
        android:onClick="listener_butDonostia"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/butVitoria" />

    <TextView
        android:id="@+id/tvEleccionTiempo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/activity_xml_tvEleccionTiempo"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/butDonosita" />

    <TextView
        android:id="@+id/tvEleccionTiempoOutput"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/tvEleccionTiempo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvEleccionTiempo"
        app:layout_constraintTop_toTopOf="@+id/tvEleccionTiempo" />

    <TextView
        android:id="@+id/tvResultadoTiempo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:background="#A3A3A3"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/butVolver_xml"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvEleccionTiempo" />

    <Button
        android:id="@+id/butVolver_xml"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:onClick="listener_butVolver"
        android:text="@string/activity_xml_butVolver"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>